--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Spectra0Core
+name: OcbCustomSpectrums
 
 on:
   create:
@@ -20,9 +20,9 @@ jobs:
     - name: Check out repository code
       uses: actions/checkout@v2
     - name: Call 7D2D compiler action
-      uses: OCB7D2D/A20BepInExPreloader@master
+      uses: OCB7D2D/OcbModCompiler@master
       with:
-        name: "Spectra0Core"
+        name: "OcbCustomSpectrums"
         version: "${{ github.ref_name }}"
         token: "${{ secrets.GITHUB_TOKEN }}"
         OCBTOKEN: "${{ secrets.OCBTOKEN }}"
